--- a/app/src/main/res/layout/activity_events_page_.xml
+++ b/app/src/main/res/layout/activity_events_page_.xml
@@ -10,11 +10,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_marginTop="66dp"
         app:layout_constraintTop_toBottomOf="@+id/tool_bar_constraint_layout"
 
         >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
 
         <com.prolificinteractive.materialcalendarview.MaterialCalendarView
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -23,11 +28,26 @@
             android:layout_height="wrap_content"
             app:mcv_showOtherDates="all"
             app:mcv_selectionColor="#BF9054"
-            tools:ignore="MissingConstraints" />
+            tools:ignore="MissingConstraints"
+            app:mcv_tileHeight="50dp"
+/>
 
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
 
+            >
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/Eventrecycleview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
+            </androidx.recyclerview.widget.RecyclerView>
+
+        </LinearLayout>
 
     </LinearLayout>
 
