--- a/app/src/main/res/layout/activity_home_page_.xml
+++ b/app/src/main/res/layout/activity_home_page_.xml
@@ -246,7 +246,7 @@
             android:layout_marginStart="88dp"
             android:layout_marginTop="24dp"
             android:layout_marginRight="64dp"
-            android:text="@string/English"
+            android:text="@string/Language"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toEndOf="@+id/home_text_view"
             app:layout_constraintTop_toTopOf="parent" />
