--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,12 @@
     <color name="colorPrimaryDark">#B38A4C</color>
     <color name="colorAccent">#084D14</color>
     <color name="white">#FFFFFF</color>
+    <color name="white2">#5EFFFFFF</color>
     <color name="ivory">#FFFFF0</color>
     <color name="light_yellow">#FFFFE0</color>
-    <color name="yellow">#FFFF00</color>
-    <color name="snow">#5BAAE0</color>
+    <color name="boom_light_yellow">#9AFFFEE0</color>
+    <color name="yellow">#B38A4C</color>
+    <color name="snow">#B59B805C</color>
     <color name="floral_white">#FFFAF0</color>
     <color name="lemon_chiffon">#FFFACD</color>
     <color name="cornsilk">#FFF8DC</color>
@@ -81,7 +83,7 @@
     <color name="pale_turquoise">#AFEEEE</color>
     <color name="greenYellow">#ADFF2F</color>
     <color name="light_blue">#ADD8E6</color>
-    <color name="dark_gray">#EBEBEB</color>
+    <color name="dark_gray">#4B4949</color>
     <color name="brown">#A52A2A</color>
     <color name="sienna">#A0522D</color>
     <color name="yellow_green">#9ACD32</color>
@@ -144,5 +146,6 @@
     <color name="dark_blue">#00008B</color>
     <color name="navy">#000080</color>
     <color name="black">#000000</color>
+    <color name="colorTransparent">#00FFFFFF</color>
 </resources>
 
