--- a/app/src/main/res/layout/activity_home_page_.xml
+++ b/app/src/main/res/layout/activity_home_page_.xml
@@ -1,261 +1,248 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/white"
+    android:orientation="vertical"
     tools:context=".HomePage_Activity">
 
 
-    <LinearLayout
-        android:id="@+id/bookingtab_button"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="103dp"
-        android:layout_height="105dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginTop="52dp"
-        android:background="@drawable/bookingbtnripple"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tool_bar_constraint_layout"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/colorPrimary">
 
-        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/bookingicon" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:text="@string/Booking"
-            android:textColor="#BF9054"
-            android:textSize="18sp" />
-
-    </LinearLayout>
+            <TextView
+                android:id="@+id/home_text_view"
+                android:layout_width="310dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="35dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:letterSpacing="-0.02"
+                android:text="@string/Home"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
 
-    <LinearLayout
-        android:id="@+id/eventtab_button"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="103dp"
-        android:layout_height="105dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginRight="68dp"
-        android:background="@drawable/eventbtnripple"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tool_bar_constraint_layout"
+            <ImageButton
+                android:id="@+id/more_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:background="?attr/selectableItemBackground"
+                android:src="@drawable/more" />
 
-        >
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/eventicon" />
+        </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:text="@string/Events"
-            android:textColor="#BF9054"
-            android:textSize="18sp" />
+    </androidx.appcompat.widget.Toolbar>
 
-    </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/shoptab_button"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="103dp"
-        android:layout_height="105dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/shopbtnripple"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bookingtab_button"
-
-        >
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/shopicon" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:text="@string/Shops"
-            android:textColor="#BF9054"
-            android:textSize="18sp" />
-
-    </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:src="@drawable/atturaif" />
 
 
     <LinearLayout
-        android:id="@+id/startARtab_button"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="103dp"
-        android:layout_height="105dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginRight="68dp"
-        android:background="@drawable/arrbtnipple"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tool_bar_constraint_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="vertical">
 
-        >
-
-        <ImageView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/aricon" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_margin="10dp"
             android:gravity="center"
-            android:text="@string/Start_AR"
-            android:textColor="#BF9054"
-            android:textSize="18sp" />
+            android:orientation="horizontal">
 
+
+            <LinearLayout
+                android:id="@+id/bookingtab_button"
+                android:layout_width="103dp"
+                android:layout_height="105dp"
+                android:layout_margin="20dp"
+                android:background="@drawable/bookingbtnripple"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/bookingicon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="@string/Booking"
+                    android:textColor="#BF9054"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/eventtab_button"
+                android:layout_width="103dp"
+                android:layout_height="105dp"
+                android:layout_margin="20dp"
+                android:background="@drawable/eventbtnripple"
+                android:gravity="center"
+                android:orientation="vertical"
+
+                >
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/eventicon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="@string/Events"
+                    android:textColor="#BF9054"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/shoptab_button"
+                android:layout_width="103dp"
+                android:layout_height="105dp"
+                android:layout_margin="20dp"
+                android:background="@drawable/shopbtnripple"
+                android:gravity="center"
+                android:orientation="vertical"
+
+                >
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/shopicon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="@string/Shops"
+                    android:textColor="#BF9054"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/startARtab_button"
+                android:layout_width="103dp"
+                android:layout_height="105dp"
+                android:layout_margin="20dp"
+                android:background="@drawable/arrbtnipple"
+                android:gravity="center"
+                android:orientation="vertical"
+
+                >
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/aricon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="@string/Start_AR"
+                    android:textColor="#BF9054"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/maptab_button"
+                android:layout_width="103dp"
+                android:layout_height="105dp"
+                android:layout_margin="20dp"
+                android:background="@drawable/shopbtnripple"
+                android:gravity="center"
+                android:orientation="vertical"
+
+                >
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/mapicon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="@string/Map"
+                    android:textColor="#BF9054"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/vrtab_button"
+                android:layout_width="103dp"
+                android:layout_height="105dp"
+                android:layout_margin="20dp"
+                android:background="@drawable/shopbtnripple"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/bricon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="@string/virtual_tour"
+                    android:textColor="#BF9054"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/maptab_button"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="103dp"
-        android:layout_height="105dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginTop="168dp"
-        android:background="@drawable/shopbtnripple"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bookingtab_button"
-
-        >
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/mapicon" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:text="@string/Map"
-            android:textColor="#BF9054"
-            android:textSize="18sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/vrtab_button"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="103dp"
-        android:layout_height="105dp"
-        android:layout_marginLeft="240dp"
-        android:layout_marginTop="168dp"
-        android:background="@drawable/shopbtnripple"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bookingtab_button"
-
-        >
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/bricon" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:text="@string/virtual_tour"
-            android:textColor="#BF9054"
-            android:textSize="18sp" />
-
-    </LinearLayout>
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/tool_bar_constraint_layout"
-        android:layout_width="0dp"
-        android:layout_height="67dp"
-        android:layout_marginTop="0dp"
-        android:background="#F8F9F9"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="23dp">
-
-        <TextView
-            android:id="@+id/home_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:letterSpacing="-0.02"
-            android:text="@string/Home"
-            android:textColor="#BF9054"
-            android:textSize="29sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="145dp"
-            tools:layout_editor_absoluteY="15dp"
-            />
-        <ImageButton
-            android:id="@+id/help_btn"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginRight="11dp"
-            android:layout_marginTop="15dp"
-            android:background="?attr/selectableItemBackground"
-            android:src="@drawable/helpicon"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="317dp"
-            tools:layout_editor_absoluteY="15dp"
-            />
-
-        <TextView
-            android:id="@+id/lang_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="88dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginRight="64dp"
-            android:text="@string/Language"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/home_text_view"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
