--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="ivory">#FFFFF0</color>
     <color name="light_yellow">#FFFFE0</color>
     <color name="boom_light_yellow">#9AFFFEE0</color>
-    <color name="yellow">#B38A4C</color>
+    <color name="yellow">#C99A6A</color>
     <color name="snow">#B59B805C</color>
     <color name="floral_white">#FFFAF0</color>
     <color name="lemon_chiffon">#FFFACD</color>
