--- a/app/src/main/res/layout/tour_item.xml
+++ b/app/src/main/res/layout/tour_item.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/tour"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="1dp"
-    android:id="@+id/tour"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:elevation="10dp"
-        app:cardBackgroundColor="@color/yellow"
-        app:cardCornerRadius="20dp">
+        app:cardBackgroundColor="@color/yellow">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,5 +64,7 @@
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+
 </LinearLayout>
 
