--- a/app/src/main/res/layout-v11/show_events_rowlayout.xml
+++ b/app/src/main/res/layout-v11/show_events_rowlayout.xml
@@ -13,6 +13,7 @@
         app:cardElevation="12dp">
 
         <RelativeLayout
+            android:id="@+id/relative"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
