--- a/app/src/main/res/layout/activity_events_page_.xml
+++ b/app/src/main/res/layout/activity_events_page_.xml
@@ -30,7 +30,8 @@
             app:mcv_selectionColor="#BF9054"
             tools:ignore="MissingConstraints"
             app:mcv_tileHeight="50dp"
-/>
+
+            />
 
         </LinearLayout>
 
@@ -83,18 +84,21 @@
             tools:layout_editor_absoluteY="15dp"
             />
 
+
         <ImageButton
             android:id="@+id/back_btn"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="360dp"
-            android:background="?attr/selectableItemBackground"
-            android:src="@drawable/backbtnicon"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/backbtn"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/home_text_view"
+            app:layout_constraintHorizontal_bias="0.298"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="#00000000"
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
