--- a/app/src/main/res/layout-v11/show_events_rowlayout.xml
+++ b/app/src/main/res/layout-v11/show_events_rowlayout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -30,46 +30,46 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="17dp"
-                >
+                android:layout_margin="17dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/mEventName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginLeft="15dp"
                     android:clickable="true"
                     android:focusable="true"
                     android:gravity="center"
-                    android:textColor="@android:color/white"
-                    android:textSize="24sp"
                     android:text="Event Name"
-                    />
+                    android:textColor="@android:color/white"
+                    android:textSize="24sp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginLeft="15dp">
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/clock"
-                    android:layout_margin="4dp"
-                  />
-                <TextView
-                    android:id="@+id/mEventTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="11dp"
+                    android:orientation="horizontal">
 
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:gravity="center"
-                    android:textColor="@android:color/white"
-                    android:textSize="15sp"
-                    android:text="Event Time"/>
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="4dp"
+                        android:src="@drawable/clock" />
+
+                    <TextView
+                        android:id="@+id/mEventTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:gravity="center"
+                        android:text="Event Time"
+                        android:textColor="@android:color/white"
+                        android:textSize="15sp" />
                 </LinearLayout>
 
 
