--- a/app/src/main/res/layout/show_events_rowlayout.xml
+++ b/app/src/main/res/layout/show_events_rowlayout.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="15dp"
+        android:layout_margin="10dp"
         app:cardElevation="12dp">
 
         <RelativeLayout
@@ -30,35 +31,33 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="20dp"
-                >
+                android:layout_margin="20dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/mEventName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="15dp"
+                    android:layout_margin="15dp"
                     android:clickable="true"
                     android:focusable="true"
-                    android:gravity="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="24sp"
+                    android:gravity="start"
                     android:text="Event Name"
-                    />
+                    android:textColor="@android:color/black"
+                    android:textSize="24sp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginLeft="15dp">
+                    android:layout_marginStart="15dp"
+                    android:orientation="horizontal">
+
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/clock"
-                        android:layout_margin="4dp"
-                        />
+                        android:layout_margin="9dp"
+                        android:src="@drawable/clock" />
+
                     <TextView
                         android:id="@+id/mEventTime"
                         android:layout_width="wrap_content"
@@ -67,9 +66,9 @@
                         android:clickable="true"
                         android:focusable="true"
                         android:gravity="center"
+                        android:text="Event Time"
                         android:textColor="@android:color/black"
-                        android:textSize="15sp"
-                        android:text="Event Time"/>
+                        android:textSize="15sp" />
                 </LinearLayout>
 
 
