--- a/app/src/main/res/layout/show_events_rowlayout.xml
+++ b/app/src/main/res/layout/show_events_rowlayout.xml
@@ -3,78 +3,76 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp">
+    android:layout_height="wrap_content"
+    >
 
-    <androidx.cardview.widget.CardView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="12dp">
+        android:layout_height="wrap_content">
 
-        <RelativeLayout
-            android:id="@+id/relative"
+        <ImageView
+            android:id="@+id/EventImage"
+            android:layout_width="402dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/placeholder"
+            android:tint="@color/photo_tint"/>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="30sp"
+            android:layout_marginLeft="17dp"
+            >
 
-            <ImageView
-                android:id="@+id/EventImage"
+            <TextView
+                android:id="@+id/mEventName"
                 android:layout_width="wrap_content"
-                android:layout_height="150dp"
-                android:layout_centerInParent="true"
-                android:layout_margin="5dp"
-                android:background="@drawable/placeholder"
-                android:scaleType="centerCrop"
-                android:tint="@color/photo_tint" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginStart="10dp"
+                android:text="event name"
+                android:textColor="@color/white"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="15dp"
+                android:clickable="true"
+                android:textSize="22sp"
+                android:textStyle="bold" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="20dp"
-                >
-
+                android:orientation="horizontal"
+                android:layout_marginLeft="15dp">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/clock"
+                    android:layout_margin="4dp"
+                    />
                 <TextView
-                    android:id="@+id/mEventName"
+                    android:id="@+id/mEventTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="15dp"
+
                     android:clickable="true"
                     android:focusable="true"
                     android:gravity="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="24sp"
-                    android:text="Event Name"
-                    />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginLeft="15dp">
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/clock"
-                        android:layout_margin="4dp"
-                        />
-                    <TextView
-                        android:id="@+id/mEventTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:gravity="center"
-                        android:textColor="@android:color/black"
-                        android:textSize="15sp"
-                        android:text="Event Time"/>
-                </LinearLayout>
-
-
+                    android:textColor="@android:color/white"
+                    android:textSize="15sp"
+                    android:text="Event Time"/>
             </LinearLayout>
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
 
+        </LinearLayout>
+
+
+
+    </RelativeLayout>
 </LinearLayout>
