--- a/app/src/main/res/layout/show_events_rowlayout.xml
+++ b/app/src/main/res/layout/show_events_rowlayout.xml
@@ -29,7 +29,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="30sp"
-            android:layout_marginLeft="17dp"
+            android:layout_marginLeft="40dp"
+
             >
 
             <TextView
@@ -38,6 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_marginStart="10dp"
+                android:layout_margin="10dp"
                 android:text="event name"
                 android:textColor="@color/white"
                 android:layout_marginTop="20dp"
@@ -50,7 +52,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginLeft="15dp">
+                android:layout_marginLeft="15dp"
+                >
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
