--- a/app/src/main/res/layout/shops_item.xml
+++ b/app/src/main/res/layout/shops_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
-    android:elevation="1dp"
+    android:elevation="0.5dp"
+    app:cardCornerRadius="10dp"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -13,9 +13,10 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/EventImage"
+            android:id="@+id/shopimage"
             android:layout_width="402dp"
             android:layout_height="150dp"
+
             android:scaleType="centerCrop"
             android:src="@drawable/placeholder"
             android:tint="@color/photo_tint" />
@@ -27,7 +28,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/mEventName"
+                android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
@@ -39,31 +40,6 @@
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="4dp"
-                    android:src="@drawable/clock" />
-
-                <TextView
-                    android:id="@+id/mEventTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:gravity="center"
-                    android:text="Event Time"
-                    android:textColor="@android:color/white"
-                    android:textSize="15sp" />
-            </LinearLayout>
 
         </LinearLayout>
 
