--- a/app/src/main/res/layout/activity_events_page_.xml
+++ b/app/src/main/res/layout/activity_events_page_.xml
@@ -43,7 +43,7 @@
                 android:id="@+id/linearlayoutnoevent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
+                android:layout_marginTop="30sp"
                 android:gravity="center_vertical|center_horizontal"
                 android:orientation="vertical">
 
