--- a/app/src/main/res/layout/activity_shops_page.xml
+++ b/app/src/main/res/layout/activity_shops_page.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".ShopsPage">
-    
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar1"
         style="@android:style/Widget.Material.Toolbar"
@@ -19,6 +19,21 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:title="@string/Shops"
         app:titleTextColor="@color/white" />
+
+    <LinearLayout
+        android:id="@+id/progressbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal">
+
+        <com.github.ybq.android.spinkit.SpinKitView
+            android:id="@+id/spin_kit"
+            style="@style/SpinKitView.Large.CubeGrid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:SpinKit_Color="@color/colorAccent" />
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
